--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,151 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+:root {
+  --primary-color: #1c1c1c;
+  --secondary-color: #d3d5da;
+  --font-size-desktop: 24px;
+  --font-size-mobile: 20px;
+  --icon-size-desktop: 24px;
+  --icon-size-mobile: 20px;
+  --h1-font-size-desktop: 64px;
+  --h1-font-size-mobile: 32px;
+  --font-family: 'Cardo';
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+* {
+  font-family: var(--font-family), serif;
+
+}
+
+body {
+  background-color: var(--primary-color);
+  color: var(--secondary-color);
+  font-size: var(--font-size-mobile);
+  margin: 0;
+  padding: 0;
+
+  @media (min-width: 768px) {
+    font-size: var(--font-size-desktop);
+  }
+}
+
+h1 {
+  font-size: var(--h1-font-size-mobile);
+  margin: 50px 20px;
+
+  @media (min-width: 768px) {
+    font-size: var(--h1-font-size-desktop);
+    margin: 30px 20px;
+  }
+}
+
+a {
+  color: var(--secondary-color);
+  text-decoration: none;
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  column-gap: 4px;
+  width: fit-content;
+  padding: 8px 0;
+  border-radius: 16px;
+
+  &:hover {
+    text-decoration: underline;
+  }
+}
+
+a.foyer {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  left: auto;
+}
+
+svg.feather {
+  width: var(--icon-size-mobile);
+  height: var(--icon-size-mobile);
+
+  @media (min-width: 768px) {
+    width: var(--icon-size-desktop);
+    height: var(--icon-size-desktop);
+  }
+}
+
+button {
+  background-color: transparent;
+  color: var(--secondary-color);
+  border: none;
+  cursor: pointer;
+}
+
+.audio {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 20px;
+  row-gap: 20px;
+
+  .audio-controllers {
+    display: flex;
+    flex-direction: row;
+    column-gap: 20px;
+    margin-top: 20px;
+    justify-content: center;
+  }
+
+  button#recordingButton {
+    position: relative;
+    width: fit-content;
+    margin: 0 auto;
+
+    svg.feather-mic {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      width: 60px;
+      height: 60px;
+      stroke-width: 1px;
+    }
+
+    svg.feather-circle {
+      width: 120px;
+      height: 120px;
+      stroke-width: 1px;
+    }
+  }
+}
+
+.popup {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 75%;
+  height: 75%;
+  transform: translate(-50%, -50%);
+  border: var(--secondary-color) 1px solid;
+  border-radius: 25px;
+  background-color: var(--primary-color);
+  padding: 25px;
+  overflow: scroll;
+
+  button {
+    background-color: var(--secondary-color);
+    color: var(--primary-color);
+    border-radius: 15px;
+    padding: 10px;
+    font-size: calc(var(--font-size-mobile) - 2px);
+    margin-left: 50%;
+    transform: translateX(-50%);
+
+    @media (min-width: 768px) {
+      font-size: calc(var(--font-size-desktop) - 4px);
+    }
+  }
+}
+
+.popup#outro {
+  display: none;
 }
